tests/typing/good/testfile-subtype-2.s
	.text
	.globl main
main:
	movq $0, %rdi
	movq %rdi, %rax
	ret
	.data
