tests/typing/bad/testfile-redef-6.s
	.text
	.globl main
main:
	ret
	.data
